--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,8 @@
 ---
 layout: default
 ---
+<article id="page">
+	
+  {{ content }}
 
-<article class="page">
-
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
-  </div>
 </article>
