--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,13 @@
 ---
 layout: default
 ---
+<article id="post-page">
+	<h2>{{ page.title }}</h2>		
+	<time datetime="{{ page.date | date_to_xmlschema }}" class="by-line">{{ page.date | date_to_string }}</time>
+	<div class="content">
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
-  
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-  
-  <hr>
-  
-  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-
-  <div class="entry">
-    {{ content }}
-  </div>
-
-  {% include disqus.html %}
+		{{ content }}
+		
+	</div>
 </article>
+
